--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <br><br>
       <button onclick="start()" class="btn btn-success" id="start">Start</button>
       <br><br>
-      <h3 id="number_of_objects" class="btn btn-warning"></h3>
+      <h3 id="object_status" class="btn btn-warning"></h3>
       <br><br>
       <h3 id="status" class="btn btn-danger"></h3>
   </center>
